[gd_scene load_steps=5 format=3 uid="uid://80y8in4wjr2c"]

[ext_resource type="Theme" uid="uid://xso5aetv5tyl" path="res://resources/themes/hud_theme.tres" id="1_t412h"]
[ext_resource type="Script" uid="uid://cfqjgpp2m8fxx" path="res://ui/player_ui/enemy_info_ui.gd" id="2_t412h"]
[ext_resource type="Texture2D" uid="uid://dilwvkks378lc" path="res://assets/icons/heart.png" id="3_t412h"]
[ext_resource type="Texture2D" uid="uid://cm81st3fxaabw" path="res://assets/icons/shield.png" id="4_4m4ps"]

[node name="EnemyInfo" type="Panel"]
offset_right = 278.0
offset_bottom = 282.0
theme = ExtResource("1_t412h")
theme_type_variation = &"HudPanelBackground"
script = ExtResource("2_t412h")

[node name="MainMargin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="Panel" type="Panel" parent="MainMargin"]
layout_mode = 2
theme_type_variation = &"HudPanelMain"

[node name="BodyMargin" type="MarginContainer" parent="MainMargin/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -5.0
offset_top = -2.0
offset_right = 6.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MainMargin/Panel/BodyMargin"]
layout_mode = 2
alignment = 1

[node name="NameLabel" type="Label" parent="MainMargin/Panel/BodyMargin/VBoxContainer"]
layout_mode = 2
text = "Enemy"
horizontal_alignment = 1

[node name="Health" type="HBoxContainer" parent="MainMargin/Panel/BodyMargin/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="HealthIcon" type="TextureRect" parent="MainMargin/Panel/BodyMargin/VBoxContainer/Health"]
layout_mode = 2
size_flags_horizontal = 2
texture = ExtResource("3_t412h")
stretch_mode = 5

[node name="HealthLabel" type="Label" parent="MainMargin/Panel/BodyMargin/VBoxContainer/Health"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.5
text = "20/20"
vertical_alignment = 1

[node name="Shield" type="HBoxContainer" parent="MainMargin/Panel/BodyMargin/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="ShieldIcon" type="TextureRect" parent="MainMargin/Panel/BodyMargin/VBoxContainer/Shield"]
layout_mode = 2
size_flags_horizontal = 2
texture = ExtResource("4_4m4ps")
stretch_mode = 5

[node name="ShieldLabel" type="Label" parent="MainMargin/Panel/BodyMargin/VBoxContainer/Shield"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.5
text = "0"
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="MainMargin/Panel/BodyMargin/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="StatusList" type="GridContainer" parent="MainMargin/Panel/BodyMargin/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
